# libheif

libheif/: BUILD.gn  box.cc  box.h  heif.cc  heif_colorconversion.cc  heif_context.cc  heif_decoder_libde265.cc  heif_file.cc  heif_image.cc
